[package]
name = "common-marmo-set"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"

[[bin]]
name = "hello"
path = "src/the-main/main.rs"

[[bin]]
name = "basicgame"
path = "src/basicgame/bgame.rs"

[[bin]]
name = "common"
path = "src/common/common.rs"

[[bin]]
name = "owner"
path = "src/owner/owner.rs"

[[bin]]
name = "stru"
path = "src/stru/stru.rs"

[[bin]]
name = "enumm"
path = "src/enumm/enumm.rs"