[package]
name = "common-marmo-set"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"

[[bin]]
name = "hello"
path = "src/bin/main.rs"

[[bin]]
name = "basicgame"
path = "src/bin/bgame.rs"

[[bin]]
name = "common"
path = "src/bin/common.rs"

[[bin]]
name = "owner"
path = "src/bin/owner.rs"

[[bin]]
name = "stru"
path = "src/bin/stru.rs"

[[bin]]
name = "enumm"
path = "src/bin/enumm.rs"

[[bin]]
name = "modpub"
path = "src/modpub/modpub.rs"

[[bin]]
name = "coll"
path = "src/bin/coll.rs"

[[bin]]
name = "stringas"
path = "src/bin/stringas.rs"

[lib]
name = "fakegame"
path = "src/fakegame/lib.rs"
